@@ -26,32 +26,28 @@ import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
+import static org.onap.dcaegen2.services.sdk.rest.services.dmaap.client.MessageRouterTestsUtils.*;
 
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
-import com.google.gson.JsonParser;
 import com.google.gson.Gson;
+import com.google.gson.JsonPrimitive;
 import io.netty.buffer.ByteBufAllocator;
 import io.netty.handler.codec.http.HttpHeaderValues;
+import io.vavr.collection.List;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
-import org.onap.dcaegen2.services.sdk.model.streams.dmaap.ImmutableMessageRouterSink;
-import org.onap.dcaegen2.services.sdk.model.streams.dmaap.MessageRouterSink;
 import org.onap.dcaegen2.services.sdk.rest.services.adapters.http.HttpHeaders;
 import org.onap.dcaegen2.services.sdk.rest.services.adapters.http.HttpMethod;
 import org.onap.dcaegen2.services.sdk.rest.services.adapters.http.HttpRequest;
 import org.onap.dcaegen2.services.sdk.rest.services.adapters.http.HttpResponse;
 import org.onap.dcaegen2.services.sdk.rest.services.adapters.http.ImmutableHttpResponse;
 import org.onap.dcaegen2.services.sdk.rest.services.adapters.http.RxHttpClient;
+import org.onap.dcaegen2.services.sdk.rest.services.dmaap.client.ContentType;
 import org.onap.dcaegen2.services.sdk.rest.services.dmaap.client.api.MessageRouterPublisher;
-import org.onap.dcaegen2.services.sdk.rest.services.dmaap.client.model.ImmutableMessageRouterPublishRequest;
 import org.onap.dcaegen2.services.sdk.rest.services.dmaap.client.model.MessageRouterPublishRequest;
 import org.onap.dcaegen2.services.sdk.rest.services.dmaap.client.model.MessageRouterPublishResponse;
 import reactor.core.publisher.Flux;
@@ -64,71 +60,122 @@ import reactor.test.StepVerifier;
  */
 class MessageRouterPublisherImplTest {
     private static final Duration TIMEOUT = Duration.ofSeconds(5);
-    private static final JsonParser parser = new JsonParser();
-    private static final MessageRouterSink sinkDefinition = ImmutableMessageRouterSink.builder()
-            .name("the topic")
-            .topicUrl("https://dmaap-mr/TOPIC")
-            .build();
+    private static final String TOPIC_URL = "https://dmaap-mr/TOPIC";
     private final RxHttpClient httpClient = mock(RxHttpClient.class);
     private final MessageRouterPublisher cut = new MessageRouterPublisherImpl(httpClient, 3, Duration.ofMinutes(1));
     private final ArgumentCaptor<HttpRequest> httpRequestArgumentCaptor = ArgumentCaptor.forClass(HttpRequest.class);
-    private final MessageRouterPublishRequest mrRequestTextPlain = createMRRPublishRequest();
-    private final MessageRouterPublishRequest mrRequestJson = createMRRPublishRequest();
+    private final MessageRouterPublishRequest plainPublishRequest = createPublishRequest(TOPIC_URL, ContentType.TEXT_PLAIN);
+    private final MessageRouterPublishRequest jsonPublishRequest = createPublishRequest(TOPIC_URL);
     private final HttpResponse successHttpResponse = createHttpResponse("OK", 200);
 
     @Test
     void puttingElementsShouldYieldNonChunkedHttpRequest() {
         // given
-        final List<String> threeJsonMessages = getAsMRJsonMessages(Arrays.asList("I", "like", "cookies"));
+        final List<String> threeJsonMessages = getAsMRJsonMessages(List.of("I", "like", "cookies"));
         final Flux<JsonObject> singleJsonMessageBatch = jsonBatch(threeJsonMessages);
         given(httpClient.call(any(HttpRequest.class))).willReturn(Mono.just(successHttpResponse));
 
         // when
         final Flux<MessageRouterPublishResponse> responses = cut
-                .put(mrRequestTextPlain, singleJsonMessageBatch);
+                .put(jsonPublishRequest, singleJsonMessageBatch);
         responses.then().block();
 
         // then
         verify(httpClient).call(httpRequestArgumentCaptor.capture());
         final HttpRequest httpRequest = httpRequestArgumentCaptor.getValue();
         assertThat(httpRequest.method()).isEqualTo(HttpMethod.POST);
-        assertThat(httpRequest.url()).isEqualTo(sinkDefinition.topicUrl());
+        assertThat(httpRequest.url()).isEqualTo(TOPIC_URL);
         assertThat(httpRequest.body()).isNotNull();
         assertThat(httpRequest.body().length()).isGreaterThan(0);
     }
 
     @Test
-    void puttingLowNumberOfElementsShouldYieldSingleHttpRequest() {
+    void puttingLowNumberOfJsonElementsShouldYieldSingleHttpRequest() {
         // given
-        final List<String> threeJsonMessages = getAsMRJsonMessages(Arrays.asList("I", "like", "cookies"));
+        final List<String> threeJsonMessages = getAsMRJsonMessages(List.of("I", "like", "cookies"));
+        final List<JsonObject> parsedThreeMessages = getAsJsonObjects(threeJsonMessages);
+
         final Flux<JsonObject> singleJsonMessageBatch = jsonBatch(threeJsonMessages);
         given(httpClient.call(any(HttpRequest.class))).willReturn(Mono.just(successHttpResponse));
 
         // when
         final Flux<MessageRouterPublishResponse> responses = cut
-                .put(mrRequestJson, singleJsonMessageBatch);
+                .put(jsonPublishRequest, singleJsonMessageBatch);
         responses.then().block();
 
         // then
         verify(httpClient).call(httpRequestArgumentCaptor.capture());
         final HttpRequest httpRequest = httpRequestArgumentCaptor.getValue();
         final JsonArray elementsInRequest = extractNonEmptyJsonRequestBody(httpRequest);
+
         assertThat(elementsInRequest.size()).isEqualTo(3);
-        assertThat(elementsInRequest.get(0).toString()).isEqualTo(threeJsonMessages.get(0));
-        assertThat(elementsInRequest.get(1).toString()).isEqualTo(threeJsonMessages.get(1));
-        assertThat(elementsInRequest.get(2).toString()).isEqualTo(threeJsonMessages.get(2));
+        assertThat(elementsInRequest.get(0)).isEqualTo(parsedThreeMessages.get(0));
+        assertThat(elementsInRequest.get(1)).isEqualTo(parsedThreeMessages.get(1));
+        assertThat(elementsInRequest.get(2)).isEqualTo(parsedThreeMessages.get(2));
+    }
+
+    @Test
+    void puttingLowNumberOfJsonElementsWithPlainContentTypeShouldYieldSingleHttpRequest() {
+        // given
+        final List<String> threeJsonMessages = getAsMRJsonMessages(List.of("I", "like", "cookies"));
+        final List<JsonObject> parsedThreeMessages = getAsJsonObjects(threeJsonMessages);
+
+        final Flux<JsonElement> singleJsonMessageBatch = plainBatch(threeJsonMessages);
+        given(httpClient.call(any(HttpRequest.class))).willReturn(Mono.just(successHttpResponse));
+
+        // when
+        final Flux<MessageRouterPublishResponse> responses = cut
+                .put(plainPublishRequest, singleJsonMessageBatch);
+        responses.then().block();
+
+        // then
+        verify(httpClient).call(httpRequestArgumentCaptor.capture());
+        final HttpRequest httpRequest = httpRequestArgumentCaptor.getValue();
+        final List<JsonObject> elementsInRequest = extractNonEmptyPlainRequestBody(httpRequest)
+                .map(JsonElement::getAsJsonObject);
+
+        assertThat(elementsInRequest.size()).isEqualTo(3);
+        assertThat(elementsInRequest.get(0)).isEqualTo(parsedThreeMessages.get(0));
+        assertThat(elementsInRequest.get(1)).isEqualTo(parsedThreeMessages.get(1));
+        assertThat(elementsInRequest.get(2)).isEqualTo(parsedThreeMessages.get(2));
+    }
+
+    @Test
+    void puttingLowNumberOfPlainElementsShouldYieldSingleHttpRequest() {
+        // given
+        final List<String> threePlainMessages = List.of("I", "like", "cookies");
+        final List<JsonPrimitive> parsedThreeMessages = getAsJsonPrimitives(threePlainMessages);
+
+        final Flux<JsonElement> singlePlainMessageBatch = plainBatch(threePlainMessages);
+        given(httpClient.call(any(HttpRequest.class))).willReturn(Mono.just(successHttpResponse));
+
+        // when
+        final Flux<MessageRouterPublishResponse> responses = cut
+                .put(plainPublishRequest, singlePlainMessageBatch);
+        responses.then().block();
+
+        // then
+        verify(httpClient).call(httpRequestArgumentCaptor.capture());
+        final HttpRequest httpRequest = httpRequestArgumentCaptor.getValue();
+        final List<JsonPrimitive> elementsInRequest = extractNonEmptyPlainRequestBody(httpRequest)
+                .map(JsonElement::getAsJsonPrimitive);
+
+        assertThat(elementsInRequest.size()).isEqualTo(3);
+        assertThat(elementsInRequest.get(0)).isEqualTo(parsedThreeMessages.get(0));
+        assertThat(elementsInRequest.get(1)).isEqualTo(parsedThreeMessages.get(1));
+        assertThat(elementsInRequest.get(2)).isEqualTo(parsedThreeMessages.get(2));
     }
 
     @Test
     void puttingElementsWithoutContentTypeSetShouldUseApplicationJson(){
         // given
-        final List<String> threeJsonMessages = getAsMRJsonMessages(Arrays.asList("I", "like", "cookies"));
+        final List<String> threeJsonMessages = getAsMRJsonMessages(List.of("I", "like", "cookies"));
         final Flux<JsonObject> singleJsonMessageBatch = jsonBatch(threeJsonMessages);
         given(httpClient.call(any(HttpRequest.class))).willReturn(Mono.just(successHttpResponse));
 
         // when
         final Flux<MessageRouterPublishResponse> responses = cut
-                .put(mrRequestJson, singleJsonMessageBatch);
+                .put(jsonPublishRequest, singleJsonMessageBatch);
         responses.then().block();
 
         // then
@@ -139,121 +186,237 @@ class MessageRouterPublisherImplTest {
     }
 
     @Test
-    void puttingLowNumberOfElementsShouldReturnSingleResponse() {
+    void puttingLowNumberOfJsonElementsShouldReturnSingleResponse() {
         // given
-        final List<String> threeJsonMessages = getAsMRJsonMessages(Arrays.asList("I", "like", "cookies"));
+        final List<String> threeJsonMessages = getAsMRJsonMessages(List.of("I", "like", "cookies"));
+        final List<JsonObject> parsedThreeMessages = getAsJsonObjects(threeJsonMessages);
+
         final Flux<JsonObject> singleJsonMessageBatch = jsonBatch(threeJsonMessages);
         given(httpClient.call(any(HttpRequest.class))).willReturn(Mono.just(successHttpResponse));
 
         // when
         final Flux<MessageRouterPublishResponse> responses = cut
-                .put(mrRequestJson, singleJsonMessageBatch);
+                .put(jsonPublishRequest, singleJsonMessageBatch);
 
         // then
-        StepVerifier.create(responses)
-                .consumeNextWith(response -> {
-                    assertThat(response.successful()).describedAs("successful").isTrue();
-                    assertThat(response.items()).containsExactly(
-                            getAsJsonObject(threeJsonMessages.get(0)),
-                            getAsJsonObject(threeJsonMessages.get(1)),
-                            getAsJsonObject(threeJsonMessages.get(2)));
-                })
-                .expectComplete()
-                .verify(TIMEOUT);
+        verifySingleResponse(parsedThreeMessages, responses);
     }
 
     @Test
-    void puttingHighNumberOfElementsShouldYieldMultipleHttpRequests() {
+    void puttingLowNumberOfJsonElementsWithPlainContentTypeShouldReturnSingleResponse() {
         // given
-        final List<String> threeJsonMessages = getAsMRJsonMessages(Arrays.asList("I", "like", "cookies"));
-        final List<String> twoJsonMessages = getAsMRJsonMessages(Arrays.asList("and", "pierogi"));
-        final Flux<JsonObject> doubleJsonMessageBatch = jsonBatch(concat(
-                threeJsonMessages, twoJsonMessages));
+        final List<String> threeJsonMessages = getAsMRJsonMessages(List.of("I", "like", "cookies"));
+        final List<JsonObject> parsedThreeMessages = getAsJsonObjects(threeJsonMessages);
 
+        final Flux<JsonElement> singleJsonMessageBatch = plainBatch(threeJsonMessages);
         given(httpClient.call(any(HttpRequest.class))).willReturn(Mono.just(successHttpResponse));
 
         // when
         final Flux<MessageRouterPublishResponse> responses = cut
-                .put(mrRequestJson, doubleJsonMessageBatch);
+                .put(plainPublishRequest, singleJsonMessageBatch);
+
+        // then
+        verifySingleResponse(parsedThreeMessages, responses);
+    }
+
+    @Test
+    void puttingLowNumberOfPlainElementsShouldReturnSingleResponse() {
+        // given
+        final List<String> threePlainMessages = List.of("I", "like", "cookies");
+        final List<JsonPrimitive> parsedThreeMessages = getAsJsonPrimitives(threePlainMessages);
+
+        final Flux<JsonElement> singlePlainMessageBatch = plainBatch(threePlainMessages);
+        given(httpClient.call(any(HttpRequest.class))).willReturn(Mono.just(successHttpResponse));
+
+        // when
+        final Flux<MessageRouterPublishResponse> responses = cut
+                .put(plainPublishRequest, singlePlainMessageBatch);
+
+        // then
+        verifySingleResponse(parsedThreeMessages, responses);
+    }
+
+    @Test
+    void puttingHighNumberOfJsonElementsShouldYieldMultipleHttpRequests() {
+        // given
+        final List<String> threeJsonMessages = getAsMRJsonMessages(List.of("I", "like", "cookies"));
+        final List<String> twoJsonMessages = getAsMRJsonMessages(List.of("and", "pierogi"));
+
+        final List<JsonObject> parsedThreeMessages = getAsJsonObjects(threeJsonMessages);
+        final List<JsonObject> parsedTwoMessages = getAsJsonObjects(twoJsonMessages);
+
+        final Flux<JsonObject> doubleJsonMessageBatch = jsonBatch(
+                threeJsonMessages.appendAll(twoJsonMessages));
+        given(httpClient.call(any(HttpRequest.class))).willReturn(Mono.just(successHttpResponse));
+
+        // when
+        final Flux<MessageRouterPublishResponse> responses = cut
+                .put(jsonPublishRequest, doubleJsonMessageBatch);
         // then
         responses.then().block();
 
         verify(httpClient, times(2)).call(httpRequestArgumentCaptor.capture());
-        final List<HttpRequest> httpRequests = httpRequestArgumentCaptor.getAllValues();
+        final List<HttpRequest> httpRequests = List.ofAll(httpRequestArgumentCaptor.getAllValues());
         assertThat(httpRequests.size()).describedAs("number of requests").isEqualTo(2);
 
         final JsonArray firstRequest = extractNonEmptyJsonRequestBody(httpRequests.get(0));
         assertThat(firstRequest.size()).isEqualTo(3);
-        assertThat(firstRequest.get(0).toString()).isEqualTo(threeJsonMessages.get(0));
-        assertThat(firstRequest.get(1).toString()).isEqualTo(threeJsonMessages.get(1));
-        assertThat(firstRequest.get(2).toString()).isEqualTo(threeJsonMessages.get(2));
+        assertThat(firstRequest.get(0)).isEqualTo(parsedThreeMessages.get(0));
+        assertThat(firstRequest.get(1)).isEqualTo(parsedThreeMessages.get(1));
+        assertThat(firstRequest.get(2)).isEqualTo(parsedThreeMessages.get(2));
 
         final JsonArray secondRequest = extractNonEmptyJsonRequestBody(httpRequests.get(1));
         assertThat(secondRequest.size()).isEqualTo(2);
-        assertThat(secondRequest.get(0).toString()).isEqualTo(twoJsonMessages.get(0));
-        assertThat(secondRequest.get(1).toString()).isEqualTo(twoJsonMessages.get(1));
+        assertThat(secondRequest.get(0)).isEqualTo(parsedTwoMessages.get(0));
+        assertThat(secondRequest.get(1)).isEqualTo(parsedTwoMessages.get(1));
     }
 
     @Test
-    void puttingHighNumberOfElementsShouldReturnMoreResponses() {
+    void puttingHighNumberOfJsonElementsWithPlainContentTypeShouldYieldMultipleHttpRequests() {
         // given
-        final List<String> threeJsonMessages = getAsMRJsonMessages(Arrays.asList("I", "like", "cookies"));
-        final List<String> twoJsonMessages = getAsMRJsonMessages(Arrays.asList("and", "pierogi"));
-        final Flux<JsonObject> doubleJsonMessageBatch = jsonBatch(concat(
-                threeJsonMessages, twoJsonMessages));
+        final List<String> threeJsonMessages = getAsMRJsonMessages(List.of("I", "like", "cookies"));
+        final List<String> twoJsonMessages = getAsMRJsonMessages(List.of("and", "pierogi"));
+
+        final List<JsonObject> parsedThreeMessages = getAsJsonObjects(threeJsonMessages);
+        final List<JsonObject> parsedTwoMessages = getAsJsonObjects(twoJsonMessages);
+
+        final Flux<JsonElement> doublePlainMessageBatch = plainBatch(
+                threeJsonMessages.appendAll(twoJsonMessages));
         given(httpClient.call(any(HttpRequest.class))).willReturn(Mono.just(successHttpResponse));
 
         // when
         final Flux<MessageRouterPublishResponse> responses = cut
-                .put(mrRequestJson, doubleJsonMessageBatch);
+                .put(plainPublishRequest, doublePlainMessageBatch);
+        // then
+        responses.then().block();
+
+        verify(httpClient, times(2)).call(httpRequestArgumentCaptor.capture());
+        final List<HttpRequest> httpRequests = List.ofAll(httpRequestArgumentCaptor.getAllValues());
+        assertThat(httpRequests.size()).describedAs("number of requests").isEqualTo(2);
+
+        List<JsonObject> firstRequest = extractNonEmptyPlainRequestBody(httpRequests.get(0))
+                .map(JsonElement::getAsJsonObject);
+        assertThat(firstRequest.size()).isEqualTo(3);
+        assertThat(firstRequest.get(0)).isEqualTo(parsedThreeMessages.get(0));
+        assertThat(firstRequest.get(1)).isEqualTo(parsedThreeMessages.get(1));
+        assertThat(firstRequest.get(2)).isEqualTo(parsedThreeMessages.get(2));
+
+        List<JsonObject> secondRequest = extractNonEmptyPlainRequestBody(httpRequests.get(1))
+                .map(JsonElement::getAsJsonObject);
+        assertThat(secondRequest.size()).isEqualTo(2);
+        assertThat(secondRequest.get(0)).isEqualTo(parsedTwoMessages.get(0));
+        assertThat(secondRequest.get(1)).isEqualTo(parsedTwoMessages.get(1));
+    }
+
+    @Test
+    void puttingHighNumberOfPlainElementsShouldYieldMultipleHttpRequests() {
+        // given
+        final List<String> threePlainMessages = List.of("I", "like", "cookies");
+        final List<String> twoPlainMessages = List.of("and", "pierogi");
+
+        final List<JsonPrimitive> parsedThreePlainMessages = getAsJsonPrimitives(threePlainMessages);
+        final List<JsonPrimitive> parsedTwoPlainMessages = getAsJsonPrimitives(twoPlainMessages);
+
+        final Flux<JsonElement> doublePlainMessageBatch = plainBatch(
+                threePlainMessages.appendAll(twoPlainMessages));
+        given(httpClient.call(any(HttpRequest.class))).willReturn(Mono.just(successHttpResponse));
+
+        // when
+        final Flux<MessageRouterPublishResponse> responses = cut
+                .put(plainPublishRequest, doublePlainMessageBatch);
+        // then
+        responses.then().block();
+
+        verify(httpClient, times(2)).call(httpRequestArgumentCaptor.capture());
+        final List<HttpRequest> httpRequests = List.ofAll(httpRequestArgumentCaptor.getAllValues());
+        assertThat(httpRequests.size()).describedAs("number of requests").isEqualTo(2);
+
+        List<JsonPrimitive> firstRequest = extractNonEmptyPlainRequestBody(httpRequests.get(0))
+                .map(JsonElement::getAsJsonPrimitive);
+        assertThat(firstRequest.size()).isEqualTo(3);
+        assertThat(firstRequest.get(0)).isEqualTo(parsedThreePlainMessages.get(0));
+        assertThat(firstRequest.get(1)).isEqualTo(parsedThreePlainMessages.get(1));
+        assertThat(firstRequest.get(2)).isEqualTo(parsedThreePlainMessages.get(2));
+
+        List<JsonPrimitive> secondRequest = extractNonEmptyPlainRequestBody(httpRequests.get(1))
+                .map(JsonElement::getAsJsonPrimitive);
+        assertThat(secondRequest.size()).isEqualTo(2);
+        assertThat(secondRequest.get(0)).isEqualTo(parsedTwoPlainMessages.get(0));
+        assertThat(secondRequest.get(1)).isEqualTo(parsedTwoPlainMessages.get(1));
+    }
+
+    @Test
+    void puttingHighNumberOfJsonElementsShouldReturnMoreResponses() {
+        // given
+        final List<String> threeJsonMessages = getAsMRJsonMessages(List.of("I", "like", "cookies"));
+        final List<String> twoJsonMessages = getAsMRJsonMessages(List.of("and", "pierogi"));
+
+        final List<JsonObject> parsedThreeMessages = getAsJsonObjects(threeJsonMessages);
+        final List<JsonObject> parsedTwoMessages = getAsJsonObjects(twoJsonMessages);
+
+        final Flux<JsonObject> doubleJsonMessageBatch = jsonBatch(threeJsonMessages.appendAll(twoJsonMessages));
+        given(httpClient.call(any(HttpRequest.class))).willReturn(Mono.just(successHttpResponse));
+
+        // when
+        final Flux<MessageRouterPublishResponse> responses = cut
+                .put(jsonPublishRequest, doubleJsonMessageBatch);
 
         // then
-        StepVerifier.create(responses)
-                .consumeNextWith(response -> {
-                    assertThat(response.successful()).describedAs("successful").isTrue();
-                    assertThat(response.items()).containsExactly(
-                            getAsJsonObject(threeJsonMessages.get(0)),
-                            getAsJsonObject(threeJsonMessages.get(1)),
-                            getAsJsonObject(threeJsonMessages.get(2)));
-                })
-                .consumeNextWith(response -> {
-                    assertThat(response.successful()).describedAs("successful").isTrue();
-                    assertThat(response.items()).containsExactly(
-                            getAsJsonObject(twoJsonMessages.get(0)),
-                            getAsJsonObject(twoJsonMessages.get(1)));
-                })
-                .expectComplete()
-                .verify(TIMEOUT);
+        verifyDoubleResponse(parsedThreeMessages, parsedTwoMessages, responses);
+    }
+
+    @Test
+    void puttingHighNumberOfJsonElementsWithPlainContentTypeShouldReturnMoreResponses() {
+        // given
+        final List<String> threeJsonMessages = getAsMRJsonMessages(List.of("I", "like", "cookies"));
+        final List<String> twoJsonMessages = getAsMRJsonMessages(List.of("and", "pierogi"));
+
+        final List<JsonObject> parsedThreeMessages = getAsJsonObjects(threeJsonMessages);
+        final List<JsonObject> parsedTwoMessages = getAsJsonObjects(twoJsonMessages);
+
+        final Flux<JsonElement> doubleJsonMessageBatch = plainBatch(threeJsonMessages.appendAll(twoJsonMessages));
+        given(httpClient.call(any(HttpRequest.class))).willReturn(Mono.just(successHttpResponse));
+
+        // when
+        final Flux<MessageRouterPublishResponse> responses = cut
+                .put(plainPublishRequest, doubleJsonMessageBatch);
+
+        // then
+        verifyDoubleResponse(parsedThreeMessages, parsedTwoMessages, responses);
+    }
+
+    @Test
+    void puttingHighNumberOfPlainElementsShouldReturnMoreResponses() {
+        // given
+        final List<String> threePlainMessages = List.of("I", "like", "cookies");
+        final List<String> twoPlainMessages = List.of("and", "pierogi");
+
+        final List<JsonPrimitive> parsedThreeMessages = getAsJsonPrimitives(threePlainMessages);
+        final List<JsonPrimitive> parsedTwoMessages = getAsJsonPrimitives(twoPlainMessages);
+
+        final Flux<JsonElement> doublePlainMessageBatch = plainBatch(
+                threePlainMessages.appendAll(twoPlainMessages));
+        given(httpClient.call(any(HttpRequest.class))).willReturn(Mono.just(successHttpResponse));
+
+        // when
+        final Flux<MessageRouterPublishResponse> responses = cut
+                .put(plainPublishRequest, doublePlainMessageBatch);
+
+        // then
+        verifyDoubleResponse(parsedThreeMessages, parsedTwoMessages, responses);
     }
 
     private static List<String> getAsMRJsonMessages(List<String> plainTextMessages){
-        return plainTextMessages.stream()
-                .map(message -> String.format("{\"message\":\"%s\"}", message))
-                .collect(Collectors.toList());
-    }
-
-
-    private static Flux<JsonObject> jsonBatch(List<String> messages){
-        return Flux.fromIterable(messages).map(parser::parse).map(JsonElement::getAsJsonObject);
-    }
-
-    private static List<String> concat(List<String> firstList, List<String> secondList){
-        return Stream.concat(firstList.stream(), secondList.stream()).collect(Collectors.toList());
+        return plainTextMessages
+                .map(message -> String.format("{\"message\":\"%s\"}", message));
     }
 
     private static HttpResponse createHttpResponse(String statusReason, int statusCode){
         return ImmutableHttpResponse.builder()
                 .statusCode(statusCode)
-                .url(sinkDefinition.topicUrl())
+                .url(TOPIC_URL)
                 .statusReason(statusReason)
                 .rawBody("[]".getBytes())
-                .build();
-    }
-
-    private static MessageRouterPublishRequest createMRRPublishRequest(){
-        return ImmutableMessageRouterPublishRequest
-                .builder()
-                .sinkDefinition(sinkDefinition)
                 .build();
     }
 
@@ -272,7 +435,47 @@ class MessageRouterPublisherImplTest {
         return new Gson().fromJson(collectNonEmptyRequestBody(httpRequest), JsonArray.class);
     }
 
-    private JsonObject getAsJsonObject(String item){
-        return new Gson().fromJson(item, JsonObject.class);
+    private List<JsonElement> extractNonEmptyPlainRequestBody(HttpRequest httpRequest){
+        return getAsJsonElements(
+                List.of(
+                        collectNonEmptyRequestBody(httpRequest)
+                                .split("\n")
+                )
+        );
+    }
+
+    private void verifySingleResponse(List<? extends JsonElement> parsedThreeMessages,
+            Flux<MessageRouterPublishResponse> responses) {
+        StepVerifier.create(responses)
+                .consumeNextWith(response -> {
+                    assertThat(response.successful()).describedAs("successful").isTrue();
+                    assertThat(response.items()).containsExactly(
+                            parsedThreeMessages.get(0),
+                            parsedThreeMessages.get(1),
+                            parsedThreeMessages.get(2));
+                })
+                .expectComplete()
+                .verify(TIMEOUT);
+    }
+
+    private void verifyDoubleResponse(List<? extends JsonElement> parsedThreeMessages,
+            List<? extends JsonElement> parsedTwoMessages, Flux<MessageRouterPublishResponse> responses) {
+
+        StepVerifier.create(responses)
+                .consumeNextWith(response -> {
+                    assertThat(response.successful()).describedAs("successful").isTrue();
+                    assertThat(response.items()).containsExactly(
+                            parsedThreeMessages.get(0),
+                            parsedThreeMessages.get(1),
+                            parsedThreeMessages.get(2));
+                })
+                .consumeNextWith(response -> {
+                    assertThat(response.successful()).describedAs("successful").isTrue();
+                    assertThat(response.items()).containsExactly(
+                            parsedTwoMessages.get(0),
+                            parsedTwoMessages.get(1));
+                })
+                .expectComplete()
+                .verify(TIMEOUT);
     }
 }
